--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,7 @@ ion-icon {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
 }
 
 /*======================== App =======================*/
